# FlashMate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  env_config.bat  pyproject.toml  requirements.txt  run.py  setup.py
doc/: design.md  doc_status.md  requirements.md
sample_data/test_zips/: README.txt
scripts/: clean.py
src/: __init__.py  main.py
src/core/: __init__.py
src/models/: __init__.py
src/ui/: __init__.py  main_window.py  main_window.ui  ui_main_window.py
src/ui/ui_classes/: __init__.py
src/utils/: constants.py
